--- a/index.html
+++ b/index.html
@@ -452,24 +452,21 @@
 <div class="row">
   
     <div class="col-lg-12">
-      <h1>Demos</h1>
+      <h1>Michael Taylor</h1>
       
-      <p>Welcome to the <strong>personal demo</strong> of Academic. Other demos available include:</p>
+      <p><strong>CURRENT WORK</strong>: EO metrology, Monte Carlo generation of ensemble fundamental climate data records, statistical analysis of ESA SST_CCI climate data records.</p>
+
+<p><strong>RECENT WORK</strong>:</p>
 
 <ul>
-<li><a href="https://sourcethemes.com/academic/" target="_blank"><strong>Project Demo</strong> (Academic&rsquo;s actual site)</a></li>
+<li>machine learning and neural network driven models of global atmospheric  aerosol mixtures, satellite-derived aerosol optical and microphysical parameters</li>
+<li>high frequency ozone and biological-UV data for satellite product validation and trend analysis</li>
+<li>fast radiative transfer solvers for retrieval and global mapping of surface spectral solar radiation and UVI.</li>
 </ul>
-
-<p><strong>Over 100,000 <a href="https://sourcethemes.com/academic/#expo" target="_blank">Amazing Websites</a> have Already Been Built with Academic</strong></p>
-
-<p><strong><a href="https://sourcethemes.com/academic/docs/install/" target="_blank">Join</a> the Most Empowered Hugo Community</strong></p>
 
 <div class="alert alert-note">
   <div>
-    <p>This homepage section is an example of adding <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank">elements</a> to the <a href="https://sourcethemes.com/academic/docs/widgets/" target="_blank"><em>Blank</em> widget</a>.</p>
-
-<p>Backgrounds can be applied to any section. Here, the <em>background</em> option is set give an <em>image parallax</em> effect.</p>
-
+    I am in the process of migrating from <a href="https://www.patternizer.org" target="_blank">www.patternizer.org</a> here. This page is under development so <strong>remember to refresh your browser regularly</strong>.
   </div>
 </div>
 
