--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                 <span>UK</span>
               
             </div>
-            <div class="card-text">H2020 FIDUCEO Climate data from Earth observation.</div>
+            <div class="card-text"><a href="http://www.fiduceo.eu" target="_blank">H2020 FIDUCEO</a>: Climate data from Earth observation. <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a>: Quality assurance of ECV products.</div>
           </div>
         </div>
       </div>
