--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@
   <div class="col-12 col-lg-8" itemprop="description">
 
     
-    <h1>Biography</h1>
+    <h1>Bio</h1>
 
-    <p>I was born in Liverpool, England in 1970. I studied pure &amp; applied physics at the University of Manchester Institute of Science and Technology (UMIST) and graduated with a BSc (I:hons) in 1992. I did a PhD in applied mathematics in the Mathematics Institute of Saint Andrews University, Scotland. I have 15 years postgraduate research experience in the fields of Earth observation and remote sensing. I am currently a member of the European Geosciences Union and the Royal Statistical Society and am doing a postdoc in the Department of Meteorology at the University of Reading where I work for the <a href="http://www.fiduceo.eu/" target="_blank">Horizon 2020 FIDUCEO project</a>.</p>
+    <p>I was born in Liverpool, England in 1970. I studied pure &amp; applied physics at the University of Manchester Institute of Science and Technology (UMIST) and graduated with a BSc (I:hons) in 1992. I obtained a PhD in applied mathematics in 1996 from the Mathematics Institute of Saint Andrews University, Scotland. I have 15 years postgraduate research experience in the fields of Earth observation and remote sensing. I am currently a member of the European Geosciences Union and the Royal Statistical Society and am doing a postdoc in the Department of Meteorology at the University of Reading where I work for the <a href="http://www.fiduceo.eu/" target="_blank">Horizon 2020 FIDUCEO project</a>.</p>
 
 
     <div class="row">
