--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
 <div class="alert alert-note">
   <div>
-    This page is under development so <strong>remember while I migrate my weblog <a href="https://www.patternizer.org" target="_blank">www.patternizer.org</a>. Do refresh your browser regularly</strong>.
+    This page is under development while I migrate my weblog <a href="https://www.patternizer.org" target="_blank">www.patternizer.org</a>. <strong>Please refresh your browser regularly</strong>.
   </div>
 </div>
 
