--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 
   
   
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,400italic,700|Roboto+Mono">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:400,700|Fauna+One">
   
 
   
   
   
-  <link rel="stylesheet" href="/css/academic.min.966b3bc843cfea29ab40b0bad2f17078.css">
+  <link rel="stylesheet" href="/css/academic.min.5c86e78f631350c2a004c2554f753e5c.css">
 
   
 
@@ -492,13 +492,13 @@
     <div class="col-lg-12">
       <h1>Michael Taylor</h1>
       
-      <p><strong>CURRENT WORK</strong>: EO metrology. Monte Carlo generation of ensemble fundamental climate data records. Statistical analysis of ESA SST_CCI climate data records.</p>
+      <p><strong>CURRENT WORK</strong>: <a href="https://en.wikipedia.org/wiki/Earth_observation" target="_blank">EO</a> <a href="https://en.wikipedia.org/wiki/Metrology" target="_blank">metrology</a>. <a href="https://en.wikipedia.org/wiki/Monte_Carlo_method" target="_blank">Monte Carlo</a> generation of ensemble fundamental climate data records (FCDR). Statistical analysis of <a href="http://esa-sst-cci.org/" target="_blank">ESA SST_CCI</a> climate data records (CDR).</p>
 
-<p><strong>RECENT WORK</strong>: Machine learning and NN-driven models of global atmospheric aerosol mixtures. Satellite-derived aerosol optical and microphysical parameters. Generation of high frequency ozone and biological-UV ground truth data for validation of satellite products. Trend analysis in geophysical timeseries. Fast radiative transfer solvers for retrieval and global mapping of surface spectral solar radiation and UVI.</p>
+<p><strong>RECENT WORK</strong>: Machine learning and <a href="https://en.wikipedia.org/wiki/Artificial_neural_network" target="_blank">NN</a>-driven models of <a href="https://doi.org/10.1016/j.atmosenv.2015.06.029" target="_blank">global atmospheric aerosol mixtures</a>. Satellite-derived aerosol optical and microphysical parameters. Generation of high frequency ozone and <a href="http://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank">biological-UV</a> ground truth data for validation of satellite products. Trend analysis in geophysical time series of SO₂ over China and stratospheric O₃. Fast radiative transfer solvers for retrieval and global mapping of surface spectral solar radiation and <a href="https://en.wikipedia.org/wiki/Ultraviolet_index" target="_blank">UVI</a> with colleagues from the <a href="http://solea.gr/" target="_blank">SOLEA</a> project.</p>
 
 <div class="alert alert-note">
   <div>
-    This page is under development while I migrate my weblog <a href="https://www.patternizer.org" target="_blank">www.patternizer.org</a>. <strong>Please refresh your browser regularly</strong>.
+    This page is under development while I migrate my weblog from <a href="https://www.patternizer.org" target="_blank">www.patternizer.org</a>. <strong>Please kindly refresh your browser regularly</strong>.
   </div>
 </div>
 
