--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
   
     <div class="col-lg-12">
       <h1>Michael Taylor</h1>
-      
+      <p>Department of Meteorology, University of Reading, UK</p>
       <p><strong>CURRENT WORK</strong>: <a href="https://en.wikipedia.org/wiki/Earth_observation" target="_blank">EO</a> <a href="https://en.wikipedia.org/wiki/Metrology" target="_blank">metrology</a>. <a href="https://en.wikipedia.org/wiki/Monte_Carlo_method" target="_blank">Monte Carlo</a> generation of ensemble fundamental climate data records (FCDR). Statistical analysis of <a href="http://esa-sst-cci.org/" target="_blank">ESA SST_CCI</a> climate data records (CDR).</p>
 
 <p><strong>RECENT WORK</strong>: Machine learning and <a href="https://en.wikipedia.org/wiki/Artificial_neural_network" target="_blank">NN</a>-driven models of <a href="https://doi.org/10.1016/j.atmosenv.2015.06.029" target="_blank">global atmospheric aerosol mixtures</a>. Satellite-derived aerosol optical and microphysical parameters. Generation of high frequency ozone and <a href="http://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank">biological-UV</a> ground truth data for validation of satellite products. Trend analysis in geophysical time series of SO₂ over China and stratospheric O₃. Fast radiative transfer solvers for retrieval and global mapping of surface spectral solar radiation and <a href="https://en.wikipedia.org/wiki/Ultraviolet_index" target="_blank">UVI</a> with colleagues from the <a href="http://solea.gr/" target="_blank">SOLEA</a> project.</p>
