--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
 <div class="alert alert-note">
   <div>
-    This page is under development while I migrate from <a href="https://www.patternizer.org" target="_blank">www.patternizer.org</a>. Please kindly <strong>refresh your browser</strong>.
+    This github.io will continuously evolve. Please kindly <strong>refresh your browser</strong>.
   </div>
 </div>
 
