--- a/404.html
+++ b/404.html
@@ -439,6 +439,13 @@
   
   
   
+  <h2>Latest</h2>
+  <ul>
+    
+      <li><a href="/project/ocean_area/">OCEAN_AREA</a></li>
+    
+  </ul>
+  
 
 </div>
 
