--- a/project/index.html
+++ b/project/index.html
@@ -463,7 +463,7 @@
     <h2><a href="/project/ocean_area/">OCEAN_AREA</a></h2>
     <div class="article-style">
       
-      Calculation of the high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.
+      Calculation of the high resolution latitudinal variation of ocean + sea ice
       
     </div>
   </div>
