--- a/404.html
+++ b/404.html
@@ -442,7 +442,7 @@
   <h2>Latest</h2>
   <ul>
     
-      <li><a href="/project/external-project/">External Project</a></li>
+      <li><a href="/project/ocean_area/">OCEAN_AREA</a></li>
     
   </ul>
   
