--- a/project/ocean_area/index.html
+++ b/project/ocean_area/index.html
@@ -592,7 +592,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/ocean/">Ocean</a>
+  <a class="badge badge-light" href="/tags/demo/">Demo</a>
   
 </div>
 
