--- a/publication/index.html
+++ b/publication/index.html
@@ -602,6 +602,10 @@
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/slides/example/" target="_blank">
+    Slides
+  </a>
+  
 
 
   
@@ -708,6 +712,10 @@
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/slides/example/" target="_blank">
+    Slides
+  </a>
+  
 
 
 
@@ -809,6 +817,10 @@
 </a>
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/slides/example/" target="_blank">
+    Slides
+  </a>
   
 
 
