--- a/publication/journal-article/index.html
+++ b/publication/journal-article/index.html
@@ -553,6 +553,10 @@
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example/" target="_blank">
+    Slides
+  </a>
+  
 
 
 
@@ -761,6 +765,10 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example/" target="_blank">
+    Slides
+  </a>
   
 
 
