--- a/publication/preprint/index.html
+++ b/publication/preprint/index.html
@@ -574,6 +574,10 @@
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example/" target="_blank">
+    Slides
+  </a>
+  
 
 
   
@@ -835,6 +839,10 @@
 </a>
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example/" target="_blank">
+    Slides
+  </a>
   
 
 
