--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -581,6 +581,10 @@
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example/" target="_blank">
+    Slides
+  </a>
+  
 
 
   
@@ -849,6 +853,10 @@
 </a>
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example/" target="_blank">
+    Slides
+  </a>
   
 
 
