--- a/talk/ensemble_sst/index.html
+++ b/talk/ensemble_sst/index.html
@@ -440,7 +440,7 @@
 
 <div class="article-header d-xl-none">
   <div class="featured-image" style="background-image: url('/talk/ensemble_sst/featured_hu852698e743b00ec881f0d330ce1243bc_52902_800x0_resize_lanczos_2.png');"></div>
-  <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/bzdhc5b3Bxs" target="_blank"><strong>Unsplash</strong></a></span>
+  <span class="article-header-caption">Image credit: <a href="https://patternizer.github.io" target="_blank"><strong>patternizer</strong></a></span>
 </div>
 
 
@@ -596,7 +596,7 @@
     <div class="col-6">
       <div class="split-header-image">
         <img src="/talk/ensemble_sst/featured_hu852698e743b00ec881f0d330ce1243bc_52902_680x500_fill_q90_lanczos_right_2.png" itemprop="image" alt="">
-        <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/bzdhc5b3Bxs" target="_blank"><strong>Unsplash</strong></a></span>
+        <span class="article-header-caption">Image credit: <a href="https://patternizer.github.io" target="_blank"><strong>patternizer</strong></a></span>
       </div>
     </div>
   </div>
