--- a/talk/index.html
+++ b/talk/index.html
@@ -537,14 +537,8 @@
 
 
   
-    
-  
 
 
-
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/patternizer/mt_talks/blob/master/L1C_ENSEMBLE.pdf" target="_blank" rel="noopener">
-  PDF
-</a>
 
 
 
@@ -559,6 +553,10 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/slides/l1c_ensemble_fcdr/" target="_blank">
+    Slides
+  </a>
   
 
 
