--- a/talk/l1c_ensemble_fcdr/index.html
+++ b/talk/l1c_ensemble_fcdr/index.html
@@ -545,14 +545,8 @@
 
 
   
-    
-  
 
 
-
-<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/mt_talks/blob/master/L1C_ENSEMBLE.pdf" target="_blank" rel="noopener">
-  PDF
-</a>
 
 
 
@@ -567,6 +561,10 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/l1c_ensemble_fcdr/" target="_blank">
+    Slides
+  </a>
   
 
 
