--- a/index.html
+++ b/index.html
@@ -1732,7 +1732,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      <em>Remote Sensing, 11</em>(8)
+      <em>Remote Sensing, 11</em>(8), 986
     
   </span>
   
@@ -1810,7 +1810,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
   DOI
 </a>
 
