--- a/publication/index.html
+++ b/publication/index.html
@@ -540,7 +540,7 @@
   </span>
   (2019).
   <a href="/publication/journal-article/" itemprop="name">Ten priority science gaps in assessing climate data record quality</a>.
-  <em>Remote Sensing, 11</em>(8).
+  <em>Remote Sensing, 11</em>(8), 986.
   
   <p>
 
@@ -580,7 +580,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
   DOI
 </a>
 
