--- a/publication/journal-article/index.html
+++ b/publication/journal-article/index.html
@@ -557,7 +557,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -770,7 +770,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.3390/rs11080986" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -817,7 +817,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Remote Sensing, 11</em>(8)</div>
+          <div class="col-12 col-md-9"><em>Remote Sensing, 11</em>(8), 986</div>
         </div>
       </div>
       <div class="col-md-1"></div>
