--- a/publication/journal-article/index.html
+++ b/publication/journal-article/index.html
@@ -439,7 +439,7 @@
 
 
 <div class="article-header d-xl-none">
-  <div class="featured-image" style="background-image: url('/publication/journal-article/featured_hu450065f220a0f109a8fbf5d76b3f40c3_188285_800x0_resize_q90_lanczos.jpg');"></div>
+  <div class="featured-image" style="background-image: url('/publication/journal-article/featured_hu3c3fe92fc3731f291d6f611b28d5cb21_69420_800x0_resize_q90_lanczos.jpg');"></div>
   <span class="article-header-caption">Image credit: <a href="https://res.mdpi.com/remotesensing/remotesensing-11-00986/article_deploy/html/images/remotesensing-11-00986-g001-550.jpg" target="_blank"><strong>MDPI</strong></a></span>
 </div>
 
@@ -552,7 +552,7 @@
 
 
 
-  
+
 
 
 
@@ -612,7 +612,7 @@
     </div>
     <div class="col-6">
       <div class="split-header-image">
-        <img src="/publication/journal-article/featured_hu450065f220a0f109a8fbf5d76b3f40c3_188285_680x500_fill_q90_lanczos_smart1.jpg" itemprop="image" alt="">
+        <img src="/publication/journal-article/featured_hu3c3fe92fc3731f291d6f611b28d5cb21_69420_680x500_fill_q90_lanczos_smart1.jpg" itemprop="image" alt="">
         <span class="article-header-caption">Image credit: <a href="https://res.mdpi.com/remotesensing/remotesensing-11-00986/article_deploy/html/images/remotesensing-11-00986-g001-550.jpg" target="_blank"><strong>MDPI</strong></a></span>
       </div>
     </div>
@@ -765,7 +765,7 @@
 
 
 
-  
+
 
 
 
@@ -827,20 +827,7 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><div class="alert alert-note">
-  <div>
-    Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
-  </div>
-</div>
-
-<div class="alert alert-note">
-  <div>
-    Click the <em>Slides</em> button above to demo Academic&rsquo;s Markdown slides feature.
-  </div>
-</div>
-
-<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank">code and math</a>.</p>
-</div>
+    <div class="article-style"></div>
 
     
 
