--- a/index.html
+++ b/index.html
@@ -1882,6 +1882,8 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
+      In <em>SPARC Report No. 9</em>
+    
   </span>
   
 
