--- a/publication/index.html
+++ b/publication/index.html
@@ -607,6 +607,7 @@
   </span>
   (2019).
   <a href="/publication/2019-sparc-ozone/" itemprop="name">SPARC/IO3C/GAW Report on Long-term Ozone Trends and Uncertainties in the Stratosphere</a>.
+  In <em>SPARC Report No. 9</em>.
   
   <p>
 
