--- a/publication/index.html
+++ b/publication/index.html
@@ -602,12 +602,11 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/irina-petropavlovskikh/">Irina Petropavlovskikh</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/sophie-godin-beekmann/">Sophie Godin-Beekmann</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/daan-hubert/">Daan Hubert</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/robert-damadeo/">Robert Damadeo</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/birgit-hassler/">Birgit Hassler</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/viktoria-f.-sofieva/">Viktoria F. Sofieva</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/others/">others</a></span>
 
   </span>
   (2019).
   <a href="/publication/2019-sparc-ozone/" itemprop="name">SPARC/IO3C/GAW Report on Long-term Ozone Trends and Uncertainties in the Stratosphere</a>.
-  In <em>SPARC/IO3C/GAW Report on Long-term Ozone Trends and Uncertainties in the Stratosphere</em>.
+  In <em>SPARC Report No. 9, GAW Report No. 241, WCRP-<sup>17</sup>&frasl;<sub>2018</sub>, available at www.sparc-climate.org/publications/sparc-reports</em>.
   
   <p>
 
