--- a/index.html
+++ b/index.html
@@ -1870,7 +1870,7 @@
   <span class="middot-divider"></span>
   <span class="pub-publication">
     
-      In <em>SPARC Report No. 9, GAW Report No. 241, WCRP-<sup>17</sup>&frasl;<sub>2018</sub>, available at www.sparc-climate.org/publications/sparc-reports</em>
+      In <em>SPARC Report No. 9, GAW Report No. 241, WCRP-17:2018, available at www.sparc-climate.org/publications/sparc-reports</em>
     
   </span>
   
