--- a/publication/index.html
+++ b/publication/index.html
@@ -606,7 +606,7 @@
   </span>
   (2019).
   <a href="/publication/2019-sparc-ozone/" itemprop="name">SPARC/IO3C/GAW Report on Long-term Ozone Trends and Uncertainties in the Stratosphere</a>.
-  In <em>SPARC Report No. 9, GAW Report No. 241, WCRP-<sup>17</sup>&frasl;<sub>2018</sub>, available at www.sparc-climate.org/publications/sparc-reports</em>.
+  In <em>SPARC Report No. 9, GAW Report No. 241, WCRP-17:2018, available at www.sparc-climate.org/publications/sparc-reports</em>.
   
   <p>
 
