--- a/publication/2019-sparc-ozone/index.html
+++ b/publication/2019-sparc-ozone/index.html
@@ -818,7 +818,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <em>SPARC Report No. 9, GAW Report No. 241, WCRP-17:2018, available at www.sparc-climate.org/publications/sparc-reports</em></div>
+          <div class="col-12 col-md-9">In <em>SPARC Report No. 9, GAW Report No. 241, WCRP-17:2018</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
