--- a/index.html
+++ b/index.html
@@ -1382,14 +1382,14 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-OCEAN_AREA" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-SST" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
     <a href="https://github.com/patternizer/OCEAN_AREA" target="_blank" rel="noopener" itemprop="url">Ocean Area</a>
   </span>
 
-  <p class="project-summary">Calculation of the high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.</p>
+  <p class="project-summary">Calculation of high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.</p>
 </div>
 
         
