--- a/project/index.html
+++ b/project/index.html
@@ -480,7 +480,7 @@
     <h2><a href="/project/ocean_area/">Ocean Area</a></h2>
     <div class="article-style">
       
-      Calculation of the high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.
+      Calculation of high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.
       
     </div>
   </div>
