--- a/project/index.html
+++ b/project/index.html
@@ -477,7 +477,7 @@
   </div>
   
   <div>
-    <h2><a href="/project/ocean_area/">Ocean Area</a></h2>
+    <h2><a href="/project/ocean_area/">Ocean Area fraction</a></h2>
     <div class="article-style">
       
       Calculation of high resolution latitudinal variation of ocean + sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0.
