--- a/project/ocean_area/index.html
+++ b/project/ocean_area/index.html
@@ -114,7 +114,7 @@
   
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="https://patternizer.github.io/project/ocean_area/">
-  <meta property="og:title" content="Ocean Area | Academic">
+  <meta property="og:title" content="Ocean Area fraction | Academic">
   <meta property="og:description" content="Calculation of high resolution latitudinal variation of ocean &#43; sea ice area using the L4 landsea mask produced with the OSTIA reanalysis sytem v3.0."><meta property="og:image" content="https://patternizer.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
@@ -132,7 +132,7 @@
 
 
 
-  <title>Ocean Area | Academic</title>
+  <title>Ocean Area fraction | Academic</title>
 
 </head>
 
@@ -444,7 +444,7 @@
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name">Ocean Area</h1>
+  <h1 itemprop="name">Ocean Area fraction</h1>
 
   
 
@@ -487,7 +487,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Ocean%20Area&amp;url=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f"
+         href="https://twitter.com/intent/tweet?text=Ocean%20Area%20fraction&amp;url=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -501,21 +501,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f&amp;title=Ocean%20Area"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f&amp;title=Ocean%20Area%20fraction"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f&amp;title=Ocean%20Area"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f&amp;title=Ocean%20Area%20fraction"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Ocean%20Area&amp;body=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f">
+         href="mailto:?subject=Ocean%20Area%20fraction&amp;body=https%3a%2f%2fpatternizer.github.io%2fproject%2focean_area%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -592,7 +592,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/sst/">SST</a>
+  <a class="badge badge-light" href="/tags/ocean_area/">ocean_area</a>
   
 </div>
 
