--- a/index.html
+++ b/index.html
@@ -1670,7 +1670,7 @@
   
   
   <a href="/publication/2019-mdpi-gaps/">
-      <img src="/publication/2019-mdpi-gaps/featured_hu3c3fe92fc3731f291d6f611b28d5cb21_69420_918x517_fill_q90_lanczos_smart1.jpg" class="article-banner" itemprop="image" alt="">
+      <img src="/publication/2019-mdpi-gaps/featured_hu5acc3229c5194afcd2851ecca994d389_2202139_918x517_fill_q90_lanczos_smart1_2.png" class="article-banner" itemprop="image" alt="">
   </a>
   
 
