--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
 <div class="alert alert-note">
   <div>
-    This github.io will continuously evolve. Please kindly <strong>refresh your browser</strong>.
+    This github.io will continuously evolve. Please <strong>refresh your browser</strong>.
   </div>
 </div>
 
