--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
         
         <li>
           <a itemprop="sameAs" href="/linkedin.com/in/patternizer" >
-            <i class="ai ai-linkedin big-icon"></i>
+            <i class="ai ai-linked-in big-icon"></i>
           </a>
         </li>
         
