--- a/publication/2019-sparc-ozone/index.html
+++ b/publication/2019-sparc-ozone/index.html
@@ -950,7 +950,7 @@
           
           <li>
             <a itemprop="sameAs" href="/linkedin.com/in/patternizer" >
-              <i class="ai ai-linkedin"></i>
+              <i class="ai ai-linked-in"></i>
             </a>
           </li>
         
