--- a/talk/l1c_ensemble_fcdr/index.html
+++ b/talk/l1c_ensemble_fcdr/index.html
@@ -770,7 +770,7 @@
           
           <li>
             <a itemprop="sameAs" href="/linkedin.com/in/patternizer" >
-              <i class="ai ai-linkedin"></i>
+              <i class="ai ai-linked-in"></i>
             </a>
           </li>
         
