--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -464,6 +464,15 @@
     </div>
   </div>
   
+  <div>
+    <h2><a href="/publication/2016-jqrst-ssa/">Modeling the relationship between photosynthetically active radiation and global horizontal irradiance using singular spectrum analysis</a></h2>
+    <div class="article-style">
+      
+      We report on the construction of generic models to calculate photosynthetically active radiation (PAR) from global horizontal irradiance (GHI), and vice versa. We show how multi-linear regression and nonlinear neural network (NN) models, trained at a calibration site (Thessaloniki) can be made generic provided that the input-output time series are processed with multi-channel singular spectrum analysis (M-SSA).
+      
+    </div>
+  </div>
+  
 
   
 
