--- a/publication/2017-amt-ssr-dust/index.html
+++ b/publication/2017-amt-ssr-dust/index.html
@@ -111,7 +111,7 @@
   
   <meta property="og:site_name" content="Patternizer">
   <meta property="og:url" content="https://patternizer.github.io/publication/2017-amt-ssr-dust/">
-  <meta property="og:title" content="Dust impact on surface solar irradiance assessed with modelsimulations, satellite observations and ground-based measurements | Patternizer">
+  <meta property="og:title" content="Dust impact on surface solar irradiance assessed with model simulations, satellite observations and ground-based measurements | Patternizer">
   <meta property="og:description" content="This study assesses the impact of dust on surface solar radiation focussing on an extreme dust event. For this purpose, we exploited the synergy of AERONET measurements and passive and active satellite remote sensing (MODIS and CALIPSO) observations, in conjunction with radiative transfer model (RTM) and chemical transport model (CTM) simulations and the 1-day forecasts from the Copernicus Atmosphere Monitoring Service (CAMS)."><meta property="og:image" content="https://patternizer.github.io/publication/2017-amt-ssr-dust/featured.png">
   <meta property="og:locale" content="en-us">
   
@@ -129,7 +129,7 @@
 
 
 
-  <title>Dust impact on surface solar irradiance assessed with modelsimulations, satellite observations and ground-based measurements | Patternizer</title>
+  <title>Dust impact on surface solar irradiance assessed with model simulations, satellite observations and ground-based measurements | Patternizer</title>
 
 </head>
 
@@ -417,7 +417,7 @@
   <div class="row">
     <div class="col-6">
       <div class="split-header-content">
-        <h1 itemprop="name">Dust impact on surface solar irradiance assessed with modelsimulations, satellite observations and ground-based measurements</h1>
+        <h1 itemprop="name">Dust impact on surface solar irradiance assessed with model simulations, satellite observations and ground-based measurements</h1>
 
         
 
@@ -544,7 +544,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f"
+         href="https://twitter.com/intent/tweet?text=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -558,21 +558,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;body=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f">
+         href="mailto:?subject=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;body=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -592,7 +592,7 @@
 </div>
 
 <div class="article-container d-xl-none">
-  <h1 itemprop="name">Dust impact on surface solar irradiance assessed with modelsimulations, satellite observations and ground-based measurements</h1>
+  <h1 itemprop="name">Dust impact on surface solar irradiance assessed with model simulations, satellite observations and ground-based measurements</h1>
 
   
 
@@ -649,7 +649,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f"
+         href="https://twitter.com/intent/tweet?text=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -663,21 +663,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f&amp;title=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20modelsimulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;body=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f">
+         href="mailto:?subject=Dust%20impact%20on%20surface%20solar%20irradiance%20assessed%20with%20model%20simulations%2c%20satellite%20observations%20and%20ground-based%20measurements&amp;body=https%3a%2f%2fpatternizer.github.io%2fpublication%2f2017-amt-ssr-dust%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
