--- a/index.html
+++ b/index.html
@@ -2426,7 +2426,7 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      The optical and microphysical characteristics of distinct aerosol types in the atmosphere are not yet specified at the level of detail …
+      Cluster analysis is applied.
     </div>
     
 
