--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -486,7 +486,7 @@
     <h2><a href="/publication/2015-amt-mixtures/">Global aerosol mixtures and their multiyear and seasonal characteristics</a></h2>
     <div class="article-style">
       
-      The optical and microphysical characteristics of distinct aerosol types in the atmosphere are not yet specified at the level of detail required for climate forcing studies.
+      Cluster analysis is applied.
       
     </div>
   </div>
