--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -486,7 +486,7 @@
     <h2><a href="/publication/2015-amt-mixtures/">Global aerosol mixtures and their multiyear and seasonal characteristics</a></h2>
     <div class="article-style">
       
-      Cluster analysis is applied.
+      Custer analysis is applied to seven years of three-hourly gridded aerosol optical depth data from the Goddard Chemistry Aerosol Radiation and Transport model, one of the most-studied global simulations of aerosol type currently available, to construct a spatial partition of the globe into a finite number of aerosol mixtures.
       
     </div>
   </div>
