--- a/index.html
+++ b/index.html
@@ -2426,7 +2426,7 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      Cluster analysis is applied.
+      Custer analysis is applied to seven years of three-hourly gridded aerosol optical depth data from the Goddard Chemistry Aerosol …
     </div>
     
 
