--- a/publication/2015-amt-mixtures/index.html
+++ b/publication/2015-amt-mixtures/index.html
@@ -527,6 +527,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=ungz4y8uDck" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 <a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1016/j.atmosenv.2015.06.029" target="_blank" rel="noopener">
@@ -742,6 +750,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=ungz4y8uDck" target="_blank" rel="noopener">
+  Video
+</a>
 
 
 
