--- a/publication/index.html
+++ b/publication/index.html
@@ -1109,7 +1109,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/=%20%22" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/=%20https:/www.sciencedirect.com/science/article/pii/S1352231015301709" target="_blank" rel="noopener">
   PDF
 </a>
 
