--- a/index.html
+++ b/index.html
@@ -2463,7 +2463,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/=%20https:/www.sciencedirect.com/science/article/pii/S1352231015301709" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.sciencedirect.com/science/article/pii/S1352231015301709" target="_blank" rel="noopener">
   PDF
 </a>
 
