--- a/publication/2015-amt-mixtures/index.html
+++ b/publication/2015-amt-mixtures/index.html
@@ -506,7 +506,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/=%20https:/www.sciencedirect.com/science/article/pii/S1352231015301709" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.sciencedirect.com/science/article/pii/S1352231015301709" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -730,7 +730,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/=%20https:/www.sciencedirect.com/science/article/pii/S1352231015301709" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.sciencedirect.com/science/article/pii/S1352231015301709" target="_blank" rel="noopener">
   PDF
 </a>
 
