--- a/publication/2010-pasp-cosmic-rays/index.html
+++ b/publication/2010-pasp-cosmic-rays/index.html
@@ -529,7 +529,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/2010ASPC..424...98T" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/http://adsabs.harvard.edu/full/2010ASPC..424...98T" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -745,7 +745,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/2010ASPC..424...98T" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/http://adsabs.harvard.edu/full/2010ASPC..424...98T" target="_blank" rel="noopener">
   DOI
 </a>
 
