--- a/index.html
+++ b/index.html
@@ -3278,7 +3278,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/2010ASPC..424...98T" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/http://adsabs.harvard.edu/full/2010ASPC..424...98T" target="_blank" rel="noopener">
   DOI
 </a>
 
