--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Research Fellow</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="https://www.noa.gr" target="_blank" rel="noopener">National Observatory of Athens</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.noa.gr/index.php?lang=en" target="_blank" rel="noopener">National Observatory of Athens</a></h4>
             <div class="text-muted exp-meta">
               Mar 2012 –
               
