--- a/project/index.html
+++ b/project/index.html
@@ -437,10 +437,10 @@
   
   
   <div>
-    <h2><a href="/project/multimode/">AERONET_multimode</a></h2>
+    <h2><a href="/project/multimode/">AERONET Multimode ASD</a></h2>
     <div class="article-style">
       
-      Multi-lognormal fitting of AERONET aerosol size distributions.
+      Multi-lognormal fitting of AERONET aerosol volume size distributions.
       
     </div>
   </div>
