--- a/index.html
+++ b/index.html
@@ -4098,7 +4098,7 @@
     
 
     <div class="mb-3">
-      <form name="contact" method="POST" action="https://formspree.io/michael.taylor@reading.ac.uk">
+      <form name="contact" method="POST" action="https://formspree.io/patternizer@gmail.com">
         <div class="form-group form-inline">
           <label class="sr-only" for="inputName">Name</label>
           <input type="text" name="name" class="form-control w-100" id="inputName" placeholder="Name" required>
