--- a/index.html
+++ b/index.html
@@ -551,14 +551,16 @@
     <h1>Bio</h1>
 
     <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
-      I studied pure &amp; applied physics at the University of Manchester Institute of Science and Technology (UMIST) 
-      and graduated with a BSc (I:hons) in 1992. I obtained a PhD in applied mathematics in 1996 from the 
+      I studied Pure &amp; Applied Physics at the University of Manchester Institute of Science and Technology (UMIST) 
+      and graduated with a BSc (I:hons) in 1992. I obtained a PhD in Applied Mathematics in 1996 from the 
       Mathematics Institute of Saint Andrews University, Scotland. I have 15 years postgraduate research experience 
-      in the fields of Earth observation, remote sensing and applied mathematics. I am a member of the 
-      Marie-Curie Alumni Association, the European Geosciences Union and the Royal Statistical Society, 
-      and my last post was as a postdoc on climate data from EO in the Department of Meteorology at the 
-      University of Reading where I worked for the Horizon 2020 
-      <a href="http://www.fiduceo.eu/" target="_blank">FIDUCEO project</a>.</p>
+      in the fields of Earth observation, remote sensing, applied statistics and scientific software engineering. 
+      I am a member of the Marie-Curie Alumni Association, the European Geosciences Union and the Royal Statistical Society. 
+      My last post was as a postdoc generating and analysing climate data from EO in the Department of Meteorology at the 
+      University of Reading where I worked for the 
+      <a href="http://www.fiduceo.eu/" target="_blank">H2020 FIDUCEO</a>,
+      <a href="http://esa-sst-cci.org/" target="_blank">ESA SST_CCI</a>, and
+      <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a>projects.</p>
 
     <div class="row">
 
