--- a/index.html
+++ b/index.html
@@ -555,7 +555,9 @@
       and graduated with a BSc (I:hons) in 1992. I obtained a PhD in Applied Mathematics in 1996 from the 
       Mathematics Institute of Saint Andrews University, Scotland. I have 15 years postgraduate research experience 
       in the fields of Earth observation, remote sensing, applied statistics and scientific software engineering. 
-      I am a member of the Marie-Curie Alumni Association, the European Geosciences Union and the Royal Statistical Society. 
+      I am a member of the <a href="https://www.mariecuriealumni.eu/" target="_blank">Marie-Curie Alumni Association</a>,
+      the <a href="https://www.egu.eu/" target="_blank">European Geosciences Union</a>,
+      and the <a href="https://www.rss.org.uk/" target="_blank">Royal Statistical Society</a>.
       My last post was as a postdoc generating and analysing climate data from EO in the Department of Meteorology at the 
       University of Reading where I worked for the 
       <a href="http://www.fiduceo.eu/" target="_blank">H2020 FIDUCEO</a>,
