--- a/index.html
+++ b/index.html
@@ -266,9 +266,10 @@
     <h1>Bio</h1>
 
     <p>I was born in Liverpool, England in 1970 when the monthly mean CO₂ concentration was 325.68 ± 0.12 ppm. 
-      I studied Pure &amp; Applied Physics at the University of Manchester Institute of Science and Technology (UMIST) 
+      I studied Pure &amp; Applied Physics at the University of Manchester (UMIST) 
       and graduated with a BSc (I:hons) in 1992. I obtained a PhD in Applied Mathematics in 1996 from the 
-      Mathematics Institute of Saint Andrews University, Scotland. I have 15 years postgraduate research experience 
+      Mathematics Institute of Saint Andrews University on wave-particle interactions in thermonuclear fusion plasma. 
+      I have 15 years postgraduate research experience 
       in the fields of Earth observation, remote sensing, applied statistics and scientific software engineering. 
       I am a member of the <a href="https://www.mariecuriealumni.eu/" target="_blank">Marie-Curie Alumni Association</a>,
       the <a href="https://www.egu.eu/" target="_blank">European Geosciences Union</a>,
