--- a/index.html
+++ b/index.html
@@ -361,13 +361,20 @@
             <h4 class="card-title exp-title text-muted mt-0 mb-1">PDRA</h4>
             <h4 class="card-title exp-company text-muted my-0"><a href="https://research.reading.ac.uk/meteorology/people/michael-taylor/" target="_blank" rel="noopener">Department of Meteorology, University of Reading</a></h4>
             <div class="text-muted exp-meta">
-              May 2017 – August 2019
+              May 2017 – Aug 2019
               
                 <span class="middot-divider"></span>
                 <span>UK</span>
               
             </div>
-            <div class="card-text"><a href="http://www.fiduceo.eu" target="_blank">H2020 FIDUCEO</a>: Climate data from Earth observation. <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a>: Quality assurance of ECV products.</div>
+            <div class="card-text"><a href="http://www.fiduceo.eu" target="_blank">H2020 FIDUCEO</a>: 
+              Climate data from Earth observation. 
+              <a href="http://esa-sst-cci.org/" target="_blank">ESA SST_CCI</a>: 
+              SST observation density analysis.
+              <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a>: 
+              Quality assurance of ECV products.
+
+            </div>
           </div>
         </div>
       </div>
